--- a/index.html
+++ b/index.html
@@ -2,11 +2,24 @@
 <html>
 <head>
 <meta charset="utf-8">
+<title> 猫のご紹介　</title>
+<style>
+h1 {font-size: 85px;
+text-align: center;}
+  a {text-decoration: none;
+  color:black;}
+  h3 {font-size: 20px;}
+  h1{border-bottom:1px solid gray; }
+</style>
 </head>
 <body>
   <h1>　猫のご紹介 </h1>
+<ol>
   <li> <h3> <a href="yuki.html" target="_blank"</a> ユキ  </h3> </li>
   <li> <h3> <a href="ame.html" target="_blank"</a> アメ </h3> </li>
   <li> <h3> <a href="sasuke.html" target="_blank"</a> サスケ </h3> </li>
   <li> <h3> <a href="tumuzi.html" target="_blank"</a> ツムジ </h3> </li>
   <li> <h3> <a href="miko.html" target="_blank"</a> ミコ </h3> </li>
+  </ol>
+    </body>
+    </html>
